# facron

./: .gitignore  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
data/: completions.mk  pkg-config.mk  systemd.mk
data/completions/: _facron  facron
data/systemd/: facron.service.in
man/: 1.mk  8.mk
man/1/: facron.1
man/8/: facron.8
po/: POTFILES.skip
src/: facron.mk
src/facron/: conf-lexer.c  conf-lexer.h  conf-parser.c  conf-parser.h  conf.c  conf.h  facron-conf-entry.c  facron-conf-entry.h  facron-conf.c  facron-conf.h  facron-lexer.c  facron-lexer.h  facron-parser.c  facron-parser.h  facron-util.c  facron-util.h  facron.c  facron.h
