# This file is part of facron.
#
# Copyright 2012 Marc-Antoine Perennou <Marc-Antoine@Perennou.com>
#
# facron is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# facron is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with facron.  If not, see <http://www.gnu.org/licenses/>.

ACLOCAL_AMFLAGS  = -I m4 ${ACLOCAL_FLAGS}
AM_MAKEFLAGS = --no-print-directory
AM_DISTCHECK_CONFIGURE_FLAGS = \
	--with-systemdsystemunitdir=$$dc_install_base/$(systemdsystemunitdir) \
	$(NULL)

AM_CFLAGS = \
	-include config.h \
	-DSYSCONFDIR=\"$(sysconfdir)\" \
	$(NULL)

AM_LIBS = \
	$(NULL)

EXTRA_DIST = \
	autogen.sh \
	NEWS \
	$(NULL)

CLEANFILES = $(NULL)
SUFFIXES = $(NULL)

sbin_PROGRAMS = $(NULL)
pkginclude_HEADERS = $(NULL)
pkglibexec_PROGRAMS = $(NULL)
lib_LTLIBRARIES = $(NULL)
noinst_LTLIBRARIES = $(NULL)

# Real stuff goes in these subfiles

include src/facron.mk
include man/8.mk
include data/systemd.mk

# Maintainance stuff

update-po:
	$(MAKE) -C po $@

release:
	$(MAKE) distcheck && \
	git commit -asm "Release $(PACKAGE_NAME) $(PACKAGE_VERSION)" && \
	git tag -sm "Release $(PACKAGE_NAME) $(PACKAGE_VERSION)" v$(PACKAGE_VERSION)

# Generate a ChangeLog file from 'git log'

dist-hook:
	@ if test -d "$(srcdir)/.git"; then \
	    echo Creating ChangeLog; \
	    cd "$(srcdir)"; \
	    ( \
	      echo -e '# Generated by Makefile. Do not edit.\n\n'; \
	      $(srcdir)/build-aux/missing --run git log --stat v2.2.1..; \
	    ) > ChangeLog.tmp; \
	    mv -f ChangeLog.tmp $(distdir)/ChangeLog; \
	    if test -f "ChangeLog.tmp"; then \
	        rm -f ChangeLog.tmp; \
	        echo Failed to generate ChangeLog >&2; \
	    fi; \
	else \
	    echo A git clone is required to generate a ChangeLog >&2; \
	fi
